Ajout du graph barchart, mais problème avec le tactile

--- a/app/src/main/res/layout/fragment_bar.xml
+++ b/app/src/main/res/layout/fragment_bar.xml
@@ -2,7 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="zac.vince.jl.patou.popitprof.BarFragment">
+    tools:context="zac.vince.jl.patou.popitprof.BarFragment"
+    android:clickable="true">
+
+
+    <com.anychart.anychart.AnyChartView
+        android:id="@+id/any_chart_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 
 
