Ajout des images et tentative d'affichage du menu circulaire

--- a/app/src/main/res/layout/activity_accueil.xml
+++ b/app/src/main/res/layout/activity_accueil.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="zac.vince.jl.patou.popitprof.Accueil">
+    tools:context="zac.vince.jl.patou.popitprof.Accueil"
+    android:id="@+id/accueilLayout">
 
     <LinearLayout
         android:layout_width="wrap_content"
