--- a/app/src/main/res/layout/activity_accueil.xml
+++ b/app/src/main/res/layout/activity_accueil.xml
@@ -42,4 +42,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/menuLayout">
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
